# rebuilt-bot

./: .gitignore  Makefile  PROJECT_CONTEXT.md  PURE_SPREAD_ARB_PRD.md  README.md  analyze_old_bot.py  bot-context.md  bot_vs_gabagool_post_mortem.html  create_llm_ingest.py  deploy.sh  fix_deposit_wallet_zero_balance.md  gabagool22-diagnostic-prd.docx  guaranteed_buy_and_merge.py  requirements.txt  run_live_merge_test.py  test_merge.py
backtest/: historical_data.py  paper_trade.py  simulate.py
config/: .env.example  default.yaml  polymarket_cryptos.json  production.yaml
docs/: ARCHITECTURE.md  CURRENT_STATE.md  INTEGRATION_PLAN.md  PARAMETERS.md  RUNBOOK.md  SETUP.md  logging_schema_v2.md  monitor_v3_README.md  operational-rust-integration-guide.md  polymarket-bot-scored-assessment.md  polymarket-historical-data-report.md  prompt_historical_data_search.md  strategic-research-pathway.md
docs/session_summaries/: session_2026-01-26_project_scaffolding.md  (+4 more)
rust/: .gitignore  Cargo.toml  pyproject.toml
rust/src/: data_collector.rs  execution.rs  lib.rs  position.rs  storage.rs  strategy.rs  ws_handler.rs
scripts/: data_collector_rust.py  discord_weekly_report.py  merge_vps_logs.py  setup_wallet.py  test_rust_integration.py
src/: __init__.py  auto_redeem.py  bot.py  capital_manager.py  client.py  config.py  crypto.py  db.py  gamma_client.py  http.py  main.py  maker_loop.py  merge_engine.py  paper_trader.py  poly_merger.py  position_tracker.py  price_feed.py  risk_manager.py  signer.py  sniper.py  spike_detector.py  stats_tracker.py  sweep_manager.py  terminal_ui.py  test_force_merge.py  websocket_client.py  window_manager.py
strategies/: __init__.py  snipe_maker.py  spread_farmer.py
tests/: __init__.py  test_accounting_reconciliation.py
(+8 files in other folders)
