[package]
name = "gabagool_rust"
version = "0.1.0"
edition = "2021"
description = "Rust hot path for gabagool Polymarket arbitrage bot"
authors = ["AI-Generated"]

[lib]
name = "gabagool_rust"
crate-type = ["cdylib"]

[dependencies]
# Official Polymarket client SDK
polymarket-client-sdk = { version = "0.4", features = ["clob", "ws", "rtds", "tracing"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = "0.23"
futures = "0.3"

# Crypto & signing (alloy for EIP-712)
alloy = { version = "1.5", default-features = false, features = ["signers", "signer-local"] }

# Decimal arithmetic for prices
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python bindings (using 0.21 for stability)
pyo3 = { version = "0.21", features = ["extension-module"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# SQLite for data storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Async streams
async-stream = "0.3"

# Broadcast channels for pub/sub
tokio-stream = { version = "0.1", features = ["sync"] }

# Use vendored OpenSSL (avoids system dependency)
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
